/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package com.android.sdkext.proto;

option java_outer_classname = "VersionRequirements";
option optimize_for = LITE_RUNTIME;

// All the modules that can be used for version requirements.
enum SdkModule {
  // R modules
  IPSEC = 1;
  MEDIA = 2;
  MEDIA_PROVIDER = 3;
  PERMISSIONS = 4;
  SDK_EXTENSIONS = 5;
  STATSD = 6;
  TETHERING = 7;
}

// A single extension version.
message ExtensionVersion {
  message ModuleRequirement {
    SdkModule module = 1;
    int32 version = 2;
  }
  repeated ModuleRequirement requirements = 1
}

// All the defined extension versions.
message ExtensionVersions {
  repeated ExtensionVersion versions = 1;
}
